# coding-dojo

./: .clang-format  .editorconfig  README.md
cpp/: CMakeLists.txt  build.cmake  build.sh  clean.cmake  gcov.cmake  gcov.sh  generate_kata.sh  project_name  test.cmake  test.sh
cpp/cmake/: CodeCoverage.cmake  Colors.cmake
cpp/include/: TEMPLATE.h  bank_account.h  fizzbuzz.h  tennis.h
cpp/src/: CMakeLists.txt  TEMPLATE.cpp  bank_account.cpp  tennis.cpp
cpp/src/kata/: fizzbuzz.cpp
cpp/src/tree/: heap.h  heap_array.cpp  heap_array.h  heap_tree.cpp  heap_tree.h  tree.cpp  tree.h
cpp/test/: CMakeLists.txt  TEMPLATE_kata.cpp  kata_bank_account.cpp  kata_fizzbuzz.cpp  kata_tennis.cpp
cpp/test/kata/: test_fizzbuzz.cpp
cpp/test/tree/: test_heap_array.cpp  test_heap_tree.cpp  test_tree.cpp
kata/: bank_account.md  fizzbuzz.md  tennis.md
typescript/: fizzbuzz.ts
